// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`writeChangelog generates basic changelog (md only by default): changelog md 1`] = `
"# Change Log - foo

<!-- This log was last generated on (date) and should not be manually modified. -->

<!-- Start content -->

## 1.1.0

(date)

### Minor changes

- new minor comment (test@test.com)
- old minor comment (test@test.com)

### Patches

- patch comment (test@test.com)
"
`;

exports[`writeChangelog generates changelogs with dependent changes in monorepo: bar CHANGELOG.md 1`] = `
"# Change Log - bar

<!-- This log was last generated on (date) and should not be manually modified. -->

<!-- Start content -->

## 1.3.5

(date)

### Patches

- Bump baz to v1.4.0
"
`;

exports[`writeChangelog generates changelogs with dependent changes in monorepo: baz CHANGELOG.md 1`] = `
"# Change Log - baz

<!-- This log was last generated on (date) and should not be manually modified. -->

<!-- Start content -->

## 1.4.0

(date)

### Minor changes

- baz comment (test@test.com)
"
`;

exports[`writeChangelog generates changelogs with dependent changes in monorepo: foo CHANGELOG.md 1`] = `
"# Change Log - foo

<!-- This log was last generated on (date) and should not be manually modified. -->

<!-- Start content -->

## 1.1.0

(date)

### Minor changes

- foo comment (test@test.com)
- Bump bar to v1.3.5
"
`;

exports[`writeChangelog generates grouped changelog in monorepo: grouped CHANGELOG.md 1`] = `
"# Change Log - foo

<!-- This log was last generated on (date) and should not be manually modified. -->

<!-- Start content -->

## 1.1.0

(date)

### Minor changes

- \`foo\`
  - foo comment 2 (test@test.com)
  - foo comment (test@test.com)
- \`baz\`
  - baz comment (test@test.com)
"
`;

exports[`writeChangelog trims previous changelog entries over maxVersions: CHANGELOG.md 1`] = `
"# Change Log - foo

<!-- This log was last generated on (date) and should not be manually modified. -->

<!-- Start content -->

## 1.3.0

(date)

### Minor changes

- foo comment 3 (test@test.com)

## 1.2.0

(date)

### Minor changes

- foo comment 2 (test@test.com)

**Changelog has been truncated. Refer to git history for older versions.**
"
`;
